# Way2AGI-public

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  install_way2agi.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  way2agi.bat  way2agi.sh  way2agi_gui.py  wizard.sh
agents/: __init__.py  base_agent.py  consciousness_agent.py
automation/: crontab.conf
canvas/: package.json  tsconfig.json
channels/: package.json  tsconfig.json
cli/: __main__.py  app.py  app.tcss  bootstrap.py  config.py  feedback.py  identity.py  llm_client.py  orchestrator_client.py
cognition/: package.json  tsconfig.json
compute/: __init__.py  desktop_daemon.py  inference_daemon.py  jetson_daemon.py  laptop_daemon.py  node_awareness.py  s24_daemon.py  s24_daemon_lite.py  shared_watchdog.py
core/: __init__.py  agent_language.py  central_orchestrator.py  config.py  micro_orchestrator.py  multi_agent_loop.py  node_daemon.py  roundtable_daemon.py  watchdog.py
dashboard/: app.js  index.html  style.css
docs/: todos.md  training_log_pc_2026-03-06.md
gateway/: package.json  tsconfig.json
memory/: Dockerfile  base_memory.py  pyproject.toml  titans_replay.py
memory/migrations/: 001_add_new_tables.sql
memory/src/: logger.py  server.py
memory/tests/: test_server.py
network_manager/: manager.py
onboarding/: package.json  tsconfig.json
orchestrator/: Dockerfile  pyproject.toml
orchestrator/src/: agent_loop.py  auto_registry.py  cache.py  cloud_providers.py  composer.py  optimizer.py  registry.py  resilience.py  roundtable.py  server.py  smart_router.py  system_prompts.py  vmao_dag.py
orchestrator/tests/: test_composer.py  test_registry.py
prompts/: grok-orchestrator-redesign.md
research/: pyproject.toml
research/src/: arxiv_crawler.py  cron.py  deep_analysis.py  gguf_pipeline.py  github_scanner.py  goals.py  model_scanner.py  pipeline.py  training_data.py
research/tests/: test_goals.py
scripts/: PC_ANLEITUNG.md  auto_commit.sh  backup_sessions.sh  build_model.py  convert_gguf.py  install.sh  merge_and_deploy.py  persist_context.py  resource_monitor.py  run_training_pipeline.sh  schattenmacher_pipeline.sh  start_micro_orchestrator.py  sync_memory.sh  train_all_agents.py  train_on_pc.py
services/: verify_agent.py
telemetry/: __init__.py  setup.py
tests/: run_discussion_live.py  run_memory_review.py  test_central_e2e.py  test_discussion.py  (+1 more)
(+156 files in other folders)
