[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "way2agi"
version = "1.0.0a1"
description = "Cognitive AI Agent — Terminal Application"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
    "requests",
    "elias-memory>=0.1",
]

[project.scripts]
way2agi = "cli.__main__:main"

[project.optional-dependencies]
memory-server = ["fastapi>=0.115", "uvicorn>=0.34"]
orchestrator = ["numpy>=1.26", "sqlite-vec>=0.1", "rank-bm25>=0.2"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["cli/tests", "memory/tests", "orchestrator/tests"]
pythonpath = [".", "memory/src", "orchestrator/src"]
asyncio_mode = "auto"
