[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "way2agi-orchestrator"
version = "0.1.0"
description = "Model Composition Engine — Capability Registry, MoA, Dynamic Chaining"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
